--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,10 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.11"
 pytest = "^8.0.0"
+coverage = "^7.4.1"
+pytest-cov = "^4.1.0"
+numpy = "^1.26.3"
+scipy = "^1.12.0"
 
 
 [build-system]
